parser/gramatica.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/

    // let identificadores = []

    // import { identificadores } from '../index.js'

    import { ids, usos} from '../index.js'
    import { ErrorReglas } from './error.js';
    import { errores } from '../index.js'
    import * as n from '../parser/visitor/CST.js';

    function peg$subclass(child, parent) {
      function C() { this.constructor = child; }
      C.prototype = parent.prototype;
      child.prototype = new C();
    }
    
    function peg$SyntaxError(message, expected, found, location) {
      var self = Error.call(this, message);
      // istanbul ignore next Check is a necessary evil to support older environments
      if (Object.setPrototypeOf) {
        Object.setPrototypeOf(self, peg$SyntaxError.prototype);
      }
      self.expected = expected;
      self.found = found;
      self.location = location;
      self.name = "SyntaxError";
      return self;
    }
    
    peg$subclass(peg$SyntaxError, Error);
    
    function peg$padEnd(str, targetLength, padString) {
      padString = padString || " ";
      if (str.length > targetLength) { return str; }
      targetLength -= str.length;
      padString += padString.repeat(targetLength);
      return str + padString.slice(0, targetLength);
    }
    
    peg$SyntaxError.prototype.format = function(sources) {
      var str = "Error: " + this.message;
      if (this.location) {
        var src = null;
        var k;
        for (k = 0; k < sources.length; k++) {
          if (sources[k].source === this.location.source) {
            src = sources[k].text.split(/\r\n|\n|\r/g);
            break;
          }
        }
        var s = this.location.start;
        var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
          ? this.location.source.offset(s)
          : s;
        var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
        if (src) {
          var e = this.location.end;
          var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
          var line = src[s.line - 1];
          var last = s.line === e.line ? e.column : line.length + 1;
          var hatLen = (last - s.column) || 1;
          str += "\n --> " + loc + "\n"
              + filler + " |\n"
              + offset_s.line + " | " + line + "\n"
              + filler + " | " + peg$padEnd("", s.column - 1, ' ')
              + peg$padEnd("", hatLen, "^");
        } else {
          str += "\n at " + loc;
        }
      }
      return str;
    };
    
    peg$SyntaxError.buildMessage = function(expected, found) {
      var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },
    
        class: function(expectation) {
          var escapedParts = expectation.parts.map(function(part) {
            return Array.isArray(part)
              ? classEscape(part[0]) + "-" + classEscape(part[1])
              : classEscape(part);
          });
    
          return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
        },
    
        any: function() {
          return "any character";
        },
    
        end: function() {
          return "end of input";
        },
    
        other: function(expectation) {
          return expectation.description;
        }
      };
    
      function hex(ch) {
        return ch.charCodeAt(0).toString(16).toUpperCase();
      }
    
      function literalEscape(s) {
        return s
          .replace(/\\/g, "\\\\")
          .replace(/"/g,  "\\\"")
          .replace(/\0/g, "\\0")
          .replace(/\t/g, "\\t")
          .replace(/\n/g, "\\n")
          .replace(/\r/g, "\\r")
          .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
          .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
      }
    
      function classEscape(s) {
        return s
          .replace(/\\/g, "\\\\")
          .replace(/\]/g, "\\]")
          .replace(/\^/g, "\\^")
          .replace(/-/g,  "\\-")
          .replace(/\0/g, "\\0")
          .replace(/\t/g, "\\t")
          .replace(/\n/g, "\\n")
          .replace(/\r/g, "\\r")
          .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
          .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
      }
    
      function describeExpectation(expectation) {
        return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
      }
    
      function describeExpected(expected) {
        var descriptions = expected.map(describeExpectation);
        var i, j;
    
        descriptions.sort();
    
        if (descriptions.length > 0) {
          for (i = 1, j = 1; i < descriptions.length; i++) {
            if (descriptions[i - 1] !== descriptions[i]) {
              descriptions[j] = descriptions[i];
              j++;
            }
          }
          descriptions.length = j;
        }
    
        switch (descriptions.length) {
          case 1:
            return descriptions[0];
    
          case 2:
            return descriptions[0] + " or " + descriptions[1];
    
          default:
            return descriptions.slice(0, -1).join(", ")
              + ", or "
              + descriptions[descriptions.length - 1];
        }
      }
    
      function describeFound(found) {
        return found ? "\"" + literalEscape(found) + "\"" : "end of input";
      }
    
      return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
    };
    
    function peg$parse(input, options) {
      options = options !== undefined ? options : {};
    
      var peg$FAILED = {};
      var peg$source = options.grammarSource;
    
      var peg$startRuleFunctions = { gramatica: peg$parsegramatica };
      var peg$startRuleFunction = peg$parsegramatica;
    
      var peg$c0 = "{";
      var peg$c1 = "contains";
      var peg$c2 = "}";
      var peg$c3 = "=";
      var peg$c4 = ";";
      var peg$c5 = "/";
      var peg$c6 = "!";
      var peg$c7 = "&";
      var peg$c8 = "!.";
      var peg$c9 = "@";
      var peg$c10 = ":";
      var peg$c11 = "$";
      var peg$c12 = "i";
      var peg$c13 = "(";
      var peg$c14 = ")";
      var peg$c15 = ".";
      var peg$c16 = "|";
      var peg$c17 = "..";
      var peg$c18 = ",";
      var peg$c19 = "::";
      var peg$c20 = "res";
      var peg$c21 = "[";
      var peg$c22 = "]";
      var peg$c23 = "-";
      var peg$c24 = "\\";
      var peg$c25 = "\"";
      var peg$c26 = "'";
      var peg$c27 = "\r\n";
      var peg$c28 = "//";
      var peg$c29 = "/*";
      var peg$c30 = "*/";
    
      var peg$r0 = /^[ \t\n\r]/;
      var peg$r1 = /^[^}]/;
      var peg$r2 = /^[?+*]/;
      var peg$r3 = /^[^[\]\\]/;
      var peg$r4 = /^[\n\r"\\\u2028-\u2029]/;
      var peg$r5 = /^[\n\r'\\\u2028-\u2029]/;
      var peg$r6 = /^[\n\r\u2028\u2029]/;
      var peg$r7 = /^["'\\bfnrt-v]/;
      var peg$r8 = /^[\n\r\u2028-\u2029]/;
      var peg$r9 = /^[0-9]/;
      var peg$r10 = /^[_a-z]/i;
      var peg$r11 = /^[_a-z0-9]/i;
      var peg$r12 = /^[^\n]/;
    
      var peg$e0 = peg$literalExpectation("{", false);
      var peg$e1 = peg$anyExpectation();
      var peg$e2 = peg$literalExpectation("contains", false);
      var peg$e3 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
      var peg$e4 = peg$classExpectation(["}"], true, false);
      var peg$e5 = peg$literalExpectation("}", false);
      var peg$e6 = peg$literalExpectation("=", false);
      var peg$e7 = peg$literalExpectation(";", false);
      var peg$e8 = peg$literalExpectation("/", false);
      var peg$e9 = peg$literalExpectation("!", false);
      var peg$e10 = peg$literalExpectation("&", false);
      var peg$e11 = peg$literalExpectation("!.", false);
      var peg$e12 = peg$literalExpectation("@", false);
      var peg$e13 = peg$literalExpectation(":", false);
      var peg$e14 = peg$literalExpectation("$", false);
      var peg$e15 = peg$classExpectation(["?", "+", "*"], false, false);
      var peg$e16 = peg$literalExpectation("i", false);
      var peg$e17 = peg$literalExpectation("(", false);
      var peg$e18 = peg$literalExpectation(")", false);
      var peg$e19 = peg$literalExpectation(".", false);
      var peg$e20 = peg$literalExpectation("|", false);
      var peg$e21 = peg$literalExpectation("..", false);
      var peg$e22 = peg$literalExpectation(",", false);
      var peg$e23 = peg$literalExpectation("::", false);
      var peg$e24 = peg$literalExpectation("res", false);
      var peg$e25 = peg$literalExpectation("[", false);
      var peg$e26 = peg$literalExpectation("]", false);
      var peg$e27 = peg$literalExpectation("-", false);
      var peg$e28 = peg$classExpectation(["[", "]", "\\"], true, false);
      var peg$e29 = peg$literalExpectation("\\", false);
      var peg$e30 = peg$literalExpectation("\"", false);
      var peg$e31 = peg$literalExpectation("'", false);
      var peg$e32 = peg$classExpectation(["\n", "\r", "\"", "\\", ["\u2028", "\u2029"]], false, false);
      var peg$e33 = peg$classExpectation(["\n", "\r", "'", "\\", ["\u2028", "\u2029"]], false, false);
      var peg$e34 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false);
      var peg$e35 = peg$classExpectation(["\"", "'", "\\", "b", "f", "n", "r", ["t", "v"]], false, false);
      var peg$e36 = peg$literalExpectation("\r\n", false);
      var peg$e37 = peg$classExpectation(["\n", "\r", ["\u2028", "\u2029"]], false, false);
      var peg$e38 = peg$classExpectation([["0", "9"]], false, false);
      var peg$e39 = peg$classExpectation(["_", ["a", "z"]], false, true);
      var peg$e40 = peg$classExpectation(["_", ["a", "z"], ["0", "9"]], false, true);
      var peg$e41 = peg$literalExpectation("//", false);
      var peg$e42 = peg$classExpectation(["\n"], true, false);
      var peg$e43 = peg$literalExpectation("/*", false);
      var peg$e44 = peg$literalExpectation("*/", false);
    
      var peg$f0 = function(code, prods) {
        let duplicados = ids.filter((item, index) => ids.indexOf(item) !== index);
        if (duplicados.length > 0) {
            errores.push(new ErrorReglas("Regla duplicada: " + duplicados[0]));
        }
    
        // Validar que todos los usos están en ids
        let noEncontrados = usos.filter(item => !ids.includes(item));
        if (noEncontrados.length > 0) {
            errores.push(new ErrorReglas("Regla no encontrada: " + noEncontrados[0]));
        }
        prods[0].start = true;
        return new n.Grammar(prods, code);
      };
      var peg$f1 = function(before, after) {
        return after ? {before, after} : {before}
      };
      var peg$f2 = function(id, alias, expr) {
        ids.push(id);
        return new n.Regla(id, expr, alias);
      };
      var peg$f3 = function(expr, rest) {
        return new n.Opciones([expr, ...rest]);
      };
      var peg$f4 = function(expr, rest, action) {
        const exprs = [expr, ...rest];
        const labeledExprs = exprs
            .filter((expr) => expr instanceof n.Pluck)
            .filter((expr) => expr.labeledExpr.label);
        if (labeledExprs.length > 0) {
            action.params = labeledExprs.reduce((args, labeled) => {
                const expr = labeled.labeledExpr.annotatedExpr.expr;
                args[labeled.labeledExpr.label] =
                    expr instanceof n.Identificador ? expr.id : '';
                return args;
            }, {});
        }
        return new n.Union(exprs, action);
      };
      var peg$f5 = function(assertion) {
        return new n.NegAssertion(assertion);
      };
      var peg$f6 = function(assertion) {
        return new n.Assertion(assertion);
      };
      var peg$f7 = function() {
        return new n.Fin();
      };
      var peg$f8 = function(pluck, expr) {
        return new n.Pluck(expr, pluck ? true : false);
      };
      var peg$f9 = function(label, expr) {
        return new n.Label(expr, label);
      };
      var peg$f10 = function(text, expr, qty) {
        return new n.Annotated(expr, qty, text ? true : false);
      };
      var peg$f11 = function(id) {
        usos.push(id)
        return new n.Identificador(id);
      };
      var peg$f12 = function(val, isCase) {
        return new n.String(val.replace(/['"]/g, ''), isCase ? true : false);
      };
      var peg$f13 = function(chars, isCase) {
        return new n.Clase(chars, isCase ? true : false);
      };
      var peg$f14 = function() {
        return new n.Punto();
      };
      var peg$f15 = function(returnType, code) {
        return new n.Predicate(returnType, code, {})
      };
      var peg$f16 = function(t) {
        return t.trim();
      };
      var peg$f17 = function(bottom, top) {
        return new n.Rango(bottom, top);
      };
      var peg$f18 = function() { return text() };
      var peg$currPos = options.peg$currPos | 0;
      var peg$savedPos = peg$currPos;
      var peg$posDetailsCache = [{ line: 1, column: 1 }];
      var peg$maxFailPos = peg$currPos;
      var peg$maxFailExpected = options.peg$maxFailExpected || [];
      var peg$silentFails = options.peg$silentFails | 0;
    
      var peg$result;
    
      if (options.startRule) {
        if (!(options.startRule in peg$startRuleFunctions)) {
          throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
        }
    
        peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
      }
    
      function text() {
        return input.substring(peg$savedPos, peg$currPos);
      }
    
      function offset() {
        return peg$savedPos;
      }
    
      function range() {
        return {
          source: peg$source,
          start: peg$savedPos,
          end: peg$currPos
        };
      }
    
      function location() {
        return peg$computeLocation(peg$savedPos, peg$currPos);
      }
    
      function expected(description, location) {
        location = location !== undefined
          ? location
          : peg$computeLocation(peg$savedPos, peg$currPos);
    
        throw peg$buildStructuredError(
          [peg$otherExpectation(description)],
          input.substring(peg$savedPos, peg$currPos),
          location
        );
      }
    
      function error(message, location) {
        location = location !== undefined
          ? location
          : peg$computeLocation(peg$savedPos, peg$currPos);
    
        throw peg$buildSimpleError(message, location);
      }
    
      function peg$literalExpectation(text, ignoreCase) {
        return { type: "literal", text: text, ignoreCase: ignoreCase };
      }
    
      function peg$classExpectation(parts, inverted, ignoreCase) {
        return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
      }
    
      function peg$anyExpectation() {
        return { type: "any" };
      }
    
      function peg$endExpectation() {
        return { type: "end" };
      }
    
      function peg$otherExpectation(description) {
        return { type: "other", description: description };
      }
    
      function peg$computePosDetails(pos) {
        var details = peg$posDetailsCache[pos];
        var p;
    
        if (details) {
          return details;
        } else {
          if (pos >= peg$posDetailsCache.length) {
            p = peg$posDetailsCache.length - 1;
          } else {
            p = pos;
            while (!peg$posDetailsCache[--p]) {}
          }
    
          details = peg$posDetailsCache[p];
          details = {
            line: details.line,
            column: details.column
          };
    
          while (p < pos) {
            if (input.charCodeAt(p) === 10) {
              details.line++;
              details.column = 1;
            } else {
              details.column++;
            }
    
            p++;
          }
    
          peg$posDetailsCache[pos] = details;
    
          return details;
        }
      }
    
      function peg$computeLocation(startPos, endPos, offset) {
        var startPosDetails = peg$computePosDetails(startPos);
        var endPosDetails = peg$computePosDetails(endPos);
    
        var res = {
          source: peg$source,
          start: {
            offset: startPos,
            line: startPosDetails.line,
            column: startPosDetails.column
          },
          end: {
            offset: endPos,
            line: endPosDetails.line,
            column: endPosDetails.column
          }
        };
        if (offset && peg$source && (typeof peg$source.offset === "function")) {
          res.start = peg$source.offset(res.start);
          res.end = peg$source.offset(res.end);
        }
        return res;
      }
    
      function peg$fail(expected) {
        if (peg$currPos < peg$maxFailPos) { return; }
    
        if (peg$currPos > peg$maxFailPos) {
          peg$maxFailPos = peg$currPos;
          peg$maxFailExpected = [];
        }
    
        peg$maxFailExpected.push(expected);
      }
    
      function peg$buildSimpleError(message, location) {
        return new peg$SyntaxError(message, null, null, location);
      }
    
      function peg$buildStructuredError(expected, found, location) {
        return new peg$SyntaxError(
          peg$SyntaxError.buildMessage(expected, found),
          expected,
          found,
          location
        );
      }
    
      function peg$parsegramatica() {
        var s0, s1, s2, s3, s4;
    
        s0 = peg$currPos;
        s1 = peg$parse_();
        s2 = peg$parseglobalCode();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        s3 = [];
        s4 = peg$parseregla();
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseregla();
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          peg$savedPos = s0;
          s0 = peg$f0(s2, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
    
        return s0;
      }
    
      function peg$parseglobalCode() {
        var s0, s1, s2, s3, s4, s5, s6, s7, s8;
    
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 123) {
          s1 = peg$c0;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$currPos;
          s3 = [];
          s4 = peg$currPos;
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$currPos;
            peg$silentFails++;
            if (input.substr(peg$currPos, 8) === peg$c1) {
              s7 = peg$c1;
              peg$currPos += 8;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            peg$silentFails--;
            if (s7 === peg$FAILED) {
              s6 = undefined;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            if (input.length > peg$currPos) {
              s5 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e1); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$currPos;
              peg$silentFails++;
              if (input.substr(peg$currPos, 8) === peg$c1) {
                s7 = peg$c1;
                peg$currPos += 8;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e2); }
              }
              peg$silentFails--;
              if (s7 === peg$FAILED) {
                s6 = undefined;
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          s2 = input.substring(s2, peg$currPos);
          s3 = [];
          s4 = input.charAt(peg$currPos);
          if (peg$r0.test(s4)) {
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e3); }
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = input.charAt(peg$currPos);
            if (peg$r0.test(s4)) {
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e3); }
            }
          }
          if (input.substr(peg$currPos, 8) === peg$c1) {
            s4 = peg$c1;
            peg$currPos += 8;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = input.charAt(peg$currPos);
            if (peg$r0.test(s6)) {
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e3); }
            }
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = input.charAt(peg$currPos);
              if (peg$r0.test(s6)) {
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e3); }
              }
            }
            s6 = peg$currPos;
            s7 = [];
            s8 = input.charAt(peg$currPos);
            if (peg$r1.test(s8)) {
              peg$currPos++;
            } else {
              s8 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e4); }
            }
            while (s8 !== peg$FAILED) {
              s7.push(s8);
              s8 = input.charAt(peg$currPos);
              if (peg$r1.test(s8)) {
                peg$currPos++;
              } else {
                s8 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e4); }
              }
            }
            s6 = input.substring(s6, peg$currPos);
            if (input.charCodeAt(peg$currPos) === 125) {
              s7 = peg$c2;
              peg$currPos++;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e5); }
            }
            if (s7 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f1(s2, s6);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
    
        return s0;
      }
    
      function peg$parseregla() {
        var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
    
        s0 = peg$currPos;
        s1 = peg$parse_();
        s2 = peg$parseidentificador();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          s4 = peg$parseliterales();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          s5 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 61) {
            s6 = peg$c3;
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e6); }
          }
          if (s6 !== peg$FAILED) {
            s7 = peg$parse_();
            s8 = peg$parseopciones();
            if (s8 !== peg$FAILED) {
              s9 = peg$currPos;
              s10 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 59) {
                s11 = peg$c4;
                peg$currPos++;
              } else {
                s11 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e7); }
              }
              if (s11 !== peg$FAILED) {
                s10 = [s10, s11];
                s9 = s10;
              } else {
                peg$currPos = s9;
                s9 = peg$FAILED;
              }
              if (s9 === peg$FAILED) {
                s9 = null;
              }
              peg$savedPos = s0;
              s0 = peg$f2(s2, s4, s8);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
    
        return s0;
      }
    
      function peg$parseopciones() {
        var s0, s1, s2, s3, s4, s5, s6, s7;
    
        s0 = peg$currPos;
        s1 = peg$parseunion();
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 47) {
            s5 = peg$c5;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e8); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            s7 = peg$parseunion();
            if (s7 !== peg$FAILED) {
              s3 = s7;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$currPos;
            s4 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 47) {
              s5 = peg$c5;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e8); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              s7 = peg$parseunion();
              if (s7 !== peg$FAILED) {
                s3 = s7;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          }
          peg$savedPos = s0;
          s0 = peg$f3(s1, s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
    
        return s0;
      }
    
      function peg$parseunion() {
        var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
    
        s0 = peg$currPos;
        s1 = peg$parseparsingExpression();
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$currPos;
          s4 = peg$parse_();
          s5 = peg$parseparsingExpression();
          if (s5 !== peg$FAILED) {
            s6 = peg$currPos;
            peg$silentFails++;
            s7 = peg$currPos;
            s8 = peg$parse_();
            s9 = peg$parseliterales();
            if (s9 === peg$FAILED) {
              s9 = null;
            }
            s10 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 61) {
              s11 = peg$c3;
              peg$currPos++;
            } else {
              s11 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e6); }
            }
            if (s11 !== peg$FAILED) {
              s8 = [s8, s9, s10, s11];
              s7 = s8;
            } else {
              peg$currPos = s7;
              s7 = peg$FAILED;
            }
            peg$silentFails--;
            if (s7 === peg$FAILED) {
              s6 = undefined;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
            if (s6 !== peg$FAILED) {
              s3 = s5;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$currPos;
            s4 = peg$parse_();
            s5 = peg$parseparsingExpression();
            if (s5 !== peg$FAILED) {
              s6 = peg$currPos;
              peg$silentFails++;
              s7 = peg$currPos;
              s8 = peg$parse_();
              s9 = peg$parseliterales();
              if (s9 === peg$FAILED) {
                s9 = null;
              }
              s10 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 61) {
                s11 = peg$c3;
                peg$currPos++;
              } else {
                s11 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e6); }
              }
              if (s11 !== peg$FAILED) {
                s8 = [s8, s9, s10, s11];
                s7 = s8;
              } else {
                peg$currPos = s7;
                s7 = peg$FAILED;
              }
              peg$silentFails--;
              if (s7 === peg$FAILED) {
                s6 = undefined;
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
              if (s6 !== peg$FAILED) {
                s3 = s5;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          }
          s3 = peg$currPos;
          s4 = peg$parse_();
          s5 = peg$parsepredicate();
          if (s5 !== peg$FAILED) {
            s3 = s5;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f4(s1, s2, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
    
        return s0;
      }
    
      function peg$parseparsingExpression() {
        var s0, s1, s2;
    
        s0 = peg$parsepluck();
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 33) {
            s1 = peg$c6;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e9); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parseannotated();
            if (s2 === peg$FAILED) {
